<resources>
    <string name="app_name">Smart Guitar Control</string>
    <string name="bt_icon">BT Icon</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="main_bluetooth_training">Bluetooth Training</string>
    <string name="main_remote_settings">Remote Settings</string>
    <string name="main_singlegrips">Train Single Grips</string>
    <string name="main_manygrips">Grip Sequence</string>
    <string name="main_gs">Train grip sequence</string>
    <string name="main_tsg_only_led">Show grip only</string>
    <string name="main_tsg_feedback_only">Feedback Mode</string>
    <string name="main_tsg_full">Full Feedback with LEDs</string>
    <string name="main_local_headline">Local Device Options</string>
    <string name="main_edit_database">Edit Database</string>
    <string name="main_local_settings">Local Settings</string>
    <string name="main_status_bt_off">Please enable bluetooth first</string>
    <string name="main_status_bt_on">Use the bluetooth button to connect</string>
    <string name="main_status_bt_searching">Ready to search for devices</string>
    <string name="main_status_bt_connecting">Connecting to a Smart Guitar</string>
    <string name="main_status_bt_connected">Connected ☑</string>
    <string name="main_status_bt_starting">Bluetooth start requested</string>
    <string name="main_status_bt_disconnected">Device disconnected</string>
    <string name="main_status_bt_disconnecting">Closing connection…</string>
    <string name="toast_hint_need_bt">Please make sure to enable bluetooth!</string>
    <string name="devices_paired_devices">Paired Devices</string>
    <string name="devices_new_devices">New Devices</string>
    <string name="devices_start_scan">Search for devices</string>
    <string name="devices_paired_devices_empty">No paired devices</string>
    <string name="devices_headline">Select a device to connect</string>
    <string name="toast_hint_select_device">Select device through the bluetooth button</string>
    <string name="devices_stop_scan">Cancel Scan</string>
    <string name="feedback_start">Begin Transfer</string>
    <string name="feedback_stop">Stop Transfer</string>
    <string name="single_grip_headline">Single Grip Training</string>
    <string name="single_grip_overview_hint">Click on an entry to train the corresponding grip</string>
    <string name="single_grip_overview_toDatabase">Edit Database</string>
    <string name="edit_db_headline">Edit Grip Database</string>
    <string name="edit_db_add">Add new grip</string>
    <string name="edit_db_edit">Edit Grip</string>
    <string name="edit_db_delete">Delete Grip</string>
    <string name="edit_db_io_headline">Import / Export</string>
    <string name="edit_db_io_export_select">Export Grips</string>
    <string name="edit_db_io_export_all">Export all Grips</string>
    <string name="edit_db_io_import_grips">Import Grips</string>
    <string name="GENERIC_save">Save</string>
    <string name="GENERIC_save_successful">Save successful</string>
    <string name="GENERIC_delete_successful">Delete successful</string>
    <string name="GENERIC_reset">Reset</string>
    <string name="GENERIC_abort">Abort</string>
    <string name="GENERIC_options">Options</string>
    <string name="GENERIC_yes">Yes</string>
    <string name="GENERIC_no">No</string>
    <string name="GENERIC_back">Go Back</string>
    <string name="GENERIC_debug">Debug</string>
    <string name="GENERIC_fail_disconnected">Oops, we disconnected!</string>
    <string name="GENERIC_fail">Catastrophic Failure, please retry!</string>
    <string name="GENERIC_success">SUCCESS!</string>
    <string name="GENERIC_continue">Continue</string>
    <string name="GENERIC_delete">Delete</string>
    <string name="GENERIC_enable">Enable</string>
    <string name="GENERIC_disable">Disable</string>
    <string name="GENERIC_data_transmit_error">Incoming data not correct, retry?</string>
    <string name="GENERIC_MISSING_FILE_EXPLORER">Please install a file explorer</string>
    <string name="finger">Finger</string>
    <string name="finger_any">Any Finger</string>
    <string name="finger0">Thumb</string>
    <string name="finger1">Index Finger</string>
    <string name="finger2">Middle Finger</string>
    <string name="finger3">Ring Finger</string>
    <string name="finger4">Pinky Finger</string>
    <string name="listOfGrips">Select a Grip</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
