<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.EditDatabase">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/edit_db_headline"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_edit_db_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manageGrips_headline" />

    <View
        android:id="@+id/divider14"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_db_io_headline"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_edit_db_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_db_io_export_select" />

    <Button
        android:id="@+id/btn_edit_db_export_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_db_io_export_all" />

    <Button
        android:id="@+id/btn_edit_db_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_db_io_import_grips" />

</LinearLayout>