<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/devices_paired_devices"
        android:textAlignment="center"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lst_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true">

    </ListView>

    <TextView
        android:id="@+id/txt_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/devices_new_devices"
        android:textAlignment="center"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lst_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <Button
        android:id="@+id/btn_devices_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startDeviceScan"
        android:text="@string/devices_start_scan" />
</LinearLayout>
